-------------------------------------------------------------------------------
Changes in version 1.017

- Added SURF (Simple Unpredictable Random Function) from algorithm
  described in http://cr.yp.to/papers/surf.ps

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.016

- Fixed socket_notcpdelay on FreeBSD 4.x (and possibly other BSDs).

- Added back the definition of socket_tcp and socket_udp, the omission
  of which broke linking with libraries compiled against older bglibs.

- Added functions for querying UCSPI environment variables.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.015

- Added a "libbg.a" build target, including all the other libraries that
  don't define a main routine (like cli).

- Added set of str_splice functions, to insert one string into another.

- Added IPv6 address parsing/formatting and network functions.

- Added a library of number formatting routines.

- Modifed str_subst to return a count of substitutions.

- Added str_xlate function.

- Added socket connect functions with a timeout.

- Added ibuf_readall, ibuf_openreadclose, ibuf_copytofd, and
  obuf_copyfromfd.

- Added resolve_ipv4name_n, to resolve a name to more than one IP.

- Rewrote the CRC routines in terms of "generic" forward and reflected
  functions.

- Added CRC32C (used in iSCSI) functions.

NOTE: The next non-bugfix version of bglibs will be rewritten to use the
new formatting routines in the appropriate iobuf and str functions.
This will require linking against additional libraries in the future, or
against the all-inclusive libbg.a.

Development of this version has been sponsored by FutureQuest, Inc.