@@ -4,6 +4,9 @@ Changes in version 1.017
 - Added SURF (Simple Unpredictable Random Function) from algorithm
   described in http://cr.yp.to/papers/surf.ps
 
+- Added str_catns, str_copyns, and obuv_putns functions that take a
+  variable number of char* parameters.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
